# cmake_template

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
